--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <title> Kenny Levu cmpm 148 </title>
 </head>
 <body>
-<a href="asgn1">Assignement 1</a>
-<a>Assignement 2</a>
-<a>Assignement 3</a>
-<a>Assignement . . . </a>
+<a href="asgn1">Assignment 1</a>
+<a>assignment 2</a>
+<a>Assignment 3</a>
+<a>Assignment . . . </a>
 
 </body>
 </html>
